<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="marks.bs.marks.MarksActivity">

    <Button
        android:background="@drawable/white_style"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:textSize="30dp"
        android:textStyle="italic"
        android:text="@string/marks_activity_back"
        android:id="@+id/back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:background="@drawable/white_style"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/add_mark"
        android:textSize="@dimen/add_text_size"
        android:textStyle="italic"
        android:id="@+id/add_mark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="0dp" />

    <ScrollView
        android:background="@drawable/white_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrolltable"
        android:scrollbars="none"
        android:layout_alignEnd="@+id/add_mark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/back"
        android:layout_marginBottom="20dp">

        <TableLayout
            android:shrinkColumns="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/table"
            android:layout_marginBottom="90dp"
            android:padding="20dp">

        </TableLayout>
    </ScrollView>

    <RelativeLayout
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="288dp"
        android:id="@+id/add_mark_layout"
        android:layout_alignParentBottom="true">

        <EditText
            android:maxHeight="120dp"
            android:background="@drawable/white_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description_mark"
            android:padding="20dp"
            android:textSize="20dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:hint="@string/description" />

        <Button
            android:background="@drawable/white_style"
            android:textSize="@dimen/add_text_size"
            android:textStyle="italic"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/add_mark"
            android:id="@+id/add_mark_submit"
            android:layout_marginTop="42dp"
            android:layout_below="@+id/description_mark"
            android:layout_alignEnd="@+id/description_mark"
            android:layout_marginLeft="15dp" />

        <Button
            android:background="@drawable/white_style"
            android:textSize="@dimen/close_text_size"
            android:textStyle="italic"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/close"
            android:id="@+id/add_mark_close"
            android:layout_alignTop="@+id/add_mark_submit"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/add_mark_submit" />

        <EditText
            android:textSize="20dp"
            android:background="@drawable/white_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="3"
            android:maxEms="3"
            android:id="@+id/your_mark"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_alignBottom="@+id/max_mark"
            android:hint="@string/mark"
            android:padding="20dp"
            android:layout_toStartOf="@+id/add_mark_submit" />

        <EditText
            android:textSize="20dp"
            android:background="@drawable/white_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="3"
            android:maxEms="3"
            android:id="@+id/max_mark"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:hint="@string/max_mark"
            android:padding="20dp"
            android:layout_toEndOf="@+id/your_mark"
            android:layout_marginLeft="15dp" />

    </RelativeLayout>

</RelativeLayout>
