<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="marks.bs.marks.SubjectChooseActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:scrollbars="none"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/add_subject_layout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/scrollView"
            android:weightSum="1"
            android:focusable="false"
            android:gravity="center"
            android:id="@+id/linearButtonLayout">

            <Button
                android:textColor="#000000"
                android:textSize="40dp"

                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/white_style"

                android:text="@string/add_subject"
                android:id="@+id/add_subject"
                android:textStyle="italic"
                android:layout_marginTop="10dp" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="288dp"
        android:id="@+id/add_subject_layout"
        android:layout_alignParentBottom="true">

        <EditText
            android:maxHeight="120dp"
            android:background="@drawable/white_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subject_name"
            android:padding="20dp"
            android:textSize="20dp"
            android:maxLines="3"
            android:layout_alignParentTop="true"
            android:layout_marginTop="80dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:hint="@string/subject_name" />

        <Button
            android:background="@drawable/white_style"
            android:textSize="@dimen/add_subject_button_text_size"
            android:textStyle="italic"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/add_subject"
            android:id="@+id/add_subject_submit"
            android:layout_marginTop="42dp"
            android:layout_below="@+id/subject_name"
            android:layout_alignEnd="@+id/subject_name"
            android:layout_marginLeft="15dp"
            android:layout_alignParentEnd="true" />

        <Button
            android:background="@drawable/white_style"
            android:textSize="@dimen/close_text_size"
            android:textStyle="italic"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/close"
            android:id="@+id/add_subject_close"
            android:layout_alignTop="@+id/add_subject_submit"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/add_subject_submit" />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/animView"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/anim_background"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
